Fixed broken style on iOS for input elements
The input["submit"] and input["button"] elements cannot be styled in iOS until you add the "-webkit-appearance: none" style.

--- a/src/less/components/form.less
+++ b/src/less/components/form.less
@@ -224,6 +224,8 @@
  * Remove default style in iOS.
  */
 
+input[type="submit"],
+input[type="button"],
 .uk-input,
 .uk-textarea { -webkit-appearance: none; }
 
